# HackAssist

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.chart/: values.yaml
.chart/templates/: deployment.yaml  ingress.yaml
.docker/: .env.example
.docker/nginx/: nginx.conf  proxy_params
assistant/: Assistant.py  Dockerfile  SETTINGS.py  addons.py  ml.py  requirements.txt
backend/: Dockerfile  Makefile  README.md  SETTINGS.py  alembic.ini  app.py  docker-compose.local.yml  pyproject.toml  requirements.txt  utilities.py
backend/.chart/: Chart.yaml
backend/.chart/templates/: service.yaml
backend/.docker/nginx/: Dockerfile  nginx.conf
backend/.docker/postgres/: Dockerfile
backend/models/: article.py  database.py  oksi.py  scheme.py
backend/routers/: index.py  upload.py
backend/utils/: ml.py  utils.py
clickhouse/: docker-compose.yml  json2clckhouse1sec.py
data/: ГЭСНмр.xml  ГЭСНп.xml  Классификатор элементов.xlsx  ФСБЦ_Маш.xml
