[tool.poetry]
name = "HackAssist"
version = "0.1.0"
description = ""
authors = ["rebelraider <leonid.chesnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
ruff = "^0.3.7"
pre-commit = "^3.7.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.29.0"
pytest = "^8.2.0"
llama-cpp-python = "^0.2.74"
transformers = {extras = ["torch"], version = "^4.43.3"}
numpy = "<2.0.0"
python-dotenv = "^1.0.1"
clickhouse-connect = "^0.7.18"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["models/__init__.py"]